@@ -47,6 +47,9 @@ MODEEXT=d
 MODEEXT=p
 !else
 MODEEXT=
+!ifdef SHARED
+TYPEEXT=
+!endif
 !endif
 !endif
 
