@@ -47,6 +47,9 @@ ifdef PROFILE
 MODEEXT=p
 else
 MODEEXT=
+ifdef SHARED
+TYPEEXT=
+endif
 endif
 endif
 
